--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,10 +15,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nima:
-    path: ../dependencies/Nima-Flutter
-  flare_flutter:
-    path: ../dependencies/Flare-Flutter/flare_flutter
+  # nima:
+  #   path: ../dependencies/Nima-Flutter
+  # flare_flutter:
+  #   path: ../dependencies/Flare-Flutter/flare_flutter
   flutter_markdown: ^0.6.6
   share: ^2.0.4
   intl: ">=0.14.0"
