--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
                  until Flutter renders its first frame. It can be removed if
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
-            <meta-data
+            <!-- <meta-data
                     android:name="io.flutter.embedding.android.SplashScreenDrawable"
-                    android:resource="@drawable/launch_with_flutter"/>
+                    android:resource="@drawable/launch_with_flutter"/> -->
 
             <!-- Theme to apply as soon as Flutter begins rendering frames -->
-            <meta-data
+            <!-- <meta-data
                     android:name="io.flutter.embedding.android.NormalTheme"
-                    android:resource="@style/NormalTheme"/>
+                    android:resource="@style/NormalTheme"/> -->
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
